`SteamUserBasicWithTimes` -> `SteamUserWithTimes`
